0.6.4.22
Added parameter -culture to Run-TestsInBCContainer and Get-TestsFromBCContainer in order to run tests in a different culture (default en-US)

0.6.4.21
Issue #752 Added two new options for -Shortcuts - DesktopFolder and CommonDesktopFolder, which will place shortcuts in a folder on the desktop
Issue #751 Added parameter -includeLabels to Get-NavContainers
Issue #765 Convert-ALCOutputToAzureDevOps fails on new AppSourceCop rules
Issue #769 filenames of tranlationfiles needs to be unescaped
All docker versions prior to 18.03.0 will stop working end of 2019 (due to TLS v1.2) - added warning if user needs to update docker
Support communication between traefik and BC container to be https in order to support mobile apps (Thanks TFenster)
Added parameter forceRefresh to Get-NavContainerTenants (thanks EPErnst)
Fix hardcoded container name when using useCleanDatabase and multitenancy (thanks ChrisBlankDe)
Support alternative database names when using Export-NavContainerDatabasesAsBacpac (thanks svengrav)


0.6.4.20
Better error handling in Run-Tests and Get-Tests
Issue #755 Sort-AppFoldersByDependencies doesn't support "id" in dependencies
Wait for tenant ready when restarting service tier in Import-TestToolkitToNavContainer and Setup-NavContainerTestUsers

0.6.4.19
Issue 716 assignPremiumPlan shouldn't require databaseCredential when using in-container database
Support Windows Servercore 1909 generic image with useBestContainerOS

0.6.4.18
Pull Request 715 use Join-Path instead of "+" in Get-NavContainerPath
Issue 728 allow CommonDesktop for shortcuts on New-BCContainer
Pull Request 726 add -copyAppToSymbolsFolder in Compile-AppInBcContainer
Issue 729 add isolation mode parameter for Setup-TraefikContainerForBcContainers
Issue 716 add -assignPremiumPlan to New-BCContainerBCUser
Issue 666 New-BCContainer with -useNewDatabase doesn't work with -multitenant
Issue 717 Run-TestsInBCContainer hanging when using ExtensionId